# Restoration-Workflow

./: .gitignore  .graphifyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/packaging/: README-DESKTOP.txt  README-WINDOWS.txt  Run.bat  build_exe.py  bundle_common.py  check_bundle_manifest.py  make_linux_appimage.py  make_macos_dmg.py  make_windows_installer.py  smoke_windows_installer.py  smoke_windows_zip.py
backend/src/restoration/: __init__.py  builtin_presets.py  cli.py  launcher.py  presets.py  service.py
backend/src/restoration/api/: __init__.py  app.py  frontend.py  jobs.py  weights.py
backend/src/restoration/core/: __init__.py  analyzer.py  auto_plan.py  ensemble.py  errors.py  executor.py  hardware.py  highlight.py  images.py  instruction.py  ordering.py  quality.py  registry.py  router_telemetry.py  rules.py  types.py  vlm.py  weights.py  workflow_text.py
backend/src/restoration/core/data/: instructir_prompts.json  rule_table.json
backend/src/restoration/nodes/: __init__.py  _faces.py  _torch.py  birefnet.py  codeformer.py  ddcolor.py  exposure.py  face_nodes.py  fbcnn.py  hat.py  instructir.py  lama.py  masks.py  old_photos.py  phase4.py  realesrgan.py  rmbg2.py  scunet.py  stretch.py  swinir.py  wrappers.py
backend/src/restoration/nodes/inference/: __init__.py  classical_scratch.py  diffusion_runtime.py  gpen_runtime.py  instructir_runtime.py  mambair_runtime.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_auto_vlm.py  test_builtin_presets.py  test_corpus_regression.py  test_ensemble.py  test_executor.py  test_exposure.py  test_hardening.py  test_mask_editor.py  test_nodes_contract.py  test_ordering.py  test_presets.py  test_quality.py  test_registry.py  test_rules.py  test_tiling.py  test_weights.py
backend/tests/corpus/: generate_corpus.py
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  GRAPHIFY_WORKFLOW.md  MODEL_STACK.md  ORIGINAL_IDEA.md  PHASE5_DECISION.md  PLUGIN_SDK.md  QA_LAUNCH.md  UI_DESIGN.md  restoration-auto-SKILL.md
docs/screenshots/qa/: HARVEST_QA.md  Scan_12_harvest_qa.json  run_harvest_qa.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/fonts/: FONT_NOTICES.txt  OFL.txt
frontend/public/themes/: index.json
frontend/scripts/: a11y-check.mjs
frontend/src/: App.module.css  App.tsx  main.tsx
frontend/src/components/common/: Button.module.css  Button.tsx  CommandPalette.module.css  CommandPalette.tsx  DownloadRow.module.css  DownloadRow.tsx  FlowSteps.module.css  FlowSteps.tsx  Icon.tsx  PreferencesBar.module.css  PreferencesBar.tsx  SettingsPanel.module.css  SettingsPanel.tsx  StatusLine.module.css  StatusLine.tsx
frontend/src/components/mask/: MaskEditor.module.css  MaskEditor.tsx
frontend/src/components/simple/: ActionBar.module.css  ActionBar.tsx  DropZone.module.css  DropZone.tsx  JobLogPanel.module.css  JobLogPanel.tsx  LightTable.module.css  LightTable.tsx  SimpleMode.module.css  SimpleMode.tsx
frontend/src/components/studio/: Canvas.module.css  Canvas.tsx  ContactSheet.module.css  ContactSheet.tsx  Inspector.module.css  Inspector.tsx  ModelStackRail.module.css  ModelStackRail.tsx  NodeCard.module.css  NodeCard.tsx  PipelineCanvas.module.css  PipelineCanvas.tsx  PresetBar.module.css  PresetBar.tsx  StageList.module.css  StageList.tsx  StageRow.module.css  StageRow.tsx  StudioMode.module.css  StudioMode.tsx
frontend/src/lib/: api.ts  batchJobs.test.ts  batchJobs.ts  canvasPipeline.ts  commands.tsx  downloadCancel.test.ts  downloadCancel.ts  downloadQueue.test.ts  downloadQueue.ts  format.test.ts  format.ts  i18n.tsx  pipelineDag.ts  pipelineStages.test.ts  pipelineStages.ts  preferences.tsx  stages.ts  themeLoader.ts  types.ts  useDifferenceImage.ts  useFocusTrap.ts  useJobEvents.ts  useUndoRedo.ts  useWeightDownloads.ts  useWeightDownloads.tsx
frontend/src/locales/: en.json
frontend/src/styles/: global.css  reactflow-theme.css  tokens.css
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
plugins/example/: manifest.json  plugin.py
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
