[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restoration-workflow"
version = "0.6.1"
description = "Local-first photo restoration engine: DAG pipeline executor, restoration node plugins, weight manager, and REST/WebSocket API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric Ayers" }]
keywords = ["photo-restoration", "image-restoration", "local-first", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "numpy>=1.26",
    "pillow>=10.0",
    "httpx>=0.27",
    "huggingface_hub>=0.23",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Real model inference. The engine, API, CLI, analyzer, and all non-inference
# tests work without these; nodes report themselves as not runnable instead.
inference = [
    "torch>=2.1",
    "spandrel>=0.4",
    # MIT-licensed loader code for extra architectures (CodeFormer, ...); a model's own
    # weight license is still checked and gated per-node, same as MAIN_REGISTRY models.
    "spandrel_extra_arches>=0.2",
    "transformers>=4.40",
    # Capped below 5: opencv-python(-headless) 5.0.0 removed cv2.CascadeClassifier
    # from the top-level namespace (confirmed 2026-07-12, not a relocation — it's
    # gone from the public API entirely in that build), which is what
    # analyzer._detect_faces() calls. An unbounded >=4.9 silently breaks face
    # detection on any fresh install once 5.x is the newest matching release.
    # Revisit once the analyzer is migrated to whatever 5.x's replacement is.
    "opencv-python-headless>=4.9,<6",
    # LaMa's only checkpoint that torch.load(weights_only=True) will accept.
    "safetensors>=0.4",
]
# Diffusion-tier nodes (PowerPaint, DiffBIR, SUPIR, FLUX Fill, stretch generative).
diffusion = [
    "diffusers>=0.30",
    "accelerate>=0.33",
]
# MambaIRv2 and other Mamba-based stretch nodes.
stretch = [
    "mamba-ssm>=2.0",
    "einops>=0.7",
]
# Windows desktop PyInstaller bundle (`python packaging/build_exe.py`).
packaging = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/ericcayers-ai/Restoration-Workflow"
Repository = "https://github.com/ericcayers-ai/Restoration-Workflow"
Issues = "https://github.com/ericcayers-ai/Restoration-Workflow/issues"
Changelog = "https://github.com/ericcayers-ai/Restoration-Workflow/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ericcayers-ai/Restoration-Workflow#documentation"

[project.scripts]
restore = "restoration.cli:main"
restoration-workflow = "restoration.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
restoration = ["core/data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "PLC0415"]
ignore = [
    # FastAPI's dependency-injection idiom *is* a call in an argument default.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# Tests import fixtures and node classes inside functions to keep the module
# import graph free of torch.
"tests/*" = ["PLC0415"]
# Packaging smoke scripts append src/ to sys.path before importing the package.
"packaging/*" = ["PLC0415"]
# Vendored upstream model architectures — linted as-is from upstream repos.
"src/restoration/nodes/vendored/*" = ["E", "F", "W", "B", "I", "UP", "N"]
